2008-08-05 TADA Tadashi <sho@spc.gr.jp>
	* defaultio.rb: detected error of no style file.
	* plugin/00default.rb: fixed #104, error on no existent day.

2008-08-01 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, 00default.rb: set @date starting with plugin running.

2008-07-18 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, tdiary.rb, skel/search.rhtml: added site search template.

2008-07-14 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/60sf.rb: fix #114. thx KAKUTANI Shintaro.

2008-07-11 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/50sp.rb: fix #113. thx KAKUTANI Shintaro.

2008-07-10 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/50sp.rb, 60sf.rb: fix #111. thx KAKUTANI Shintaro.

2008-07-08 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb, plugin/00default.rb: use device-width accessed by iPhone/iPod touch.

2008-07-05 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb, index.rb: raise 404 error when bot access to no existent diary.
	* tdiary.rb, plugin/00default.rb: support iPhone/iPod touch.

2008-07-05 KURODA Hiraku <hiraku at sapporo.email.ne.jp>
	* fixed error when volatile.tdr is not exist.

2008-07-02 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* merge from Test_SelectFilter.

2008-07-01 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/filter/plugin/antispamservice.rb: fix key verify condition.
	* misc/filter/antispam.rb, misc/filter/plugin/antispam.rb,
	misc/filter/plugin/*/antispam.rb: rename antispam to antispamservice.

2008-06-25 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: escape double quotation in title attribute of
	subtitle anchor.

2008-06-24 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: added title attribute in subtitle anchor.

2008-06-23 TADA Tadashi <sho@spc.gr.jp>
	* skel/footer.rhtml: using rescue on display to RUBY_PATCHLEVEL.

2008-06-23 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb: add 'Semulator', 'Vemulator', 'J-EMULATOR' and 'emobile' to 